@@ -1,3 +1,12 @@
+2005-03-02  Mark McLoughlin  <markmc@redhat.com>
+
+	* admin-tool/monitorwindow.py: move about dialog
+	stuff to
+	
+	* admin-tool/aboutdialog.py: here.
+	
+	* admin-tool/Makefile.am: add aboutdialog.py
+
 2005-03-01  Mark McLoughlin  <markmc@redhat.com>
 
 	* lib/sources/filessource.py:
